plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
    alias(libs.plugins.graalvm.native)
    alias(libs.plugins.jooq.codegen)
    alias(libs.plugins.spotless)
    alias(libs.plugins.spotbugs)
}

group = 'me.carlosalmanzab.wardenpos'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.matching("GraalVM")
    }
}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDir tasks.named('jooqCodegen')
        }
    }
    codegenTools {
        java {
            srcDirs = [
                    'src/codegenTools/java',
                    'src/main/java'
            ]
            include 'me/carlosalmanzab/wardenpos/buildtools/**'
            include 'me/carlosalmanzab/wardenpos/jooq/codegen/**'
            include 'me/carlosalmanzab/wardenpos/jooq/converter/**'
        }
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.springframework.boot:spring-boot-starter-jooq'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation('org.springframework.boot:spring-boot-starter-webmvc') {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
        exclude group: 'com.fasterxml.jackson.dataformat', module: 'jackson-dataformat-xml'
    }
    implementation 'org.springframework.boot:spring-boot-starter-jetty'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation libs.jjwt.api
    implementation libs.jjwt.impl
    implementation libs.jjwt.jackson

    implementation libs.springdoc
    implementation libs.mapstruct.core
    implementation libs.uuid.generator

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor libs.mapstruct.processor

    runtimeOnly libs.sqlite
    compileOnly 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    jooqCodegen libs.sqlite
    jooqCodegen libs.uuid.generator
    jooqCodegen files(sourceSets.codegenTools.output)

    codegenToolsImplementation 'org.flywaydb:flyway-core'
    codegenToolsImplementation libs.sqlite
    codegenToolsImplementation 'org.jooq:jooq'
    codegenToolsImplementation 'org.jooq:jooq-codegen'
}

tasks.named('test') {
    useJUnitPlatform()
}

apply from: 'gradle/jooq.gradle'
apply from: 'gradle/quality.gradle'
apply from: 'gradle/native.gradle'